@@ -87,10 +87,27 @@ dependencies {
 	//mongodb
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
+	// apple login
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // 테스트 용
+	implementation 'org.apache.httpcomponents:httpclient'
+	implementation 'com.nimbusds:nimbus-jose-jwt:3.10'
+	implementation "io.jsonwebtoken:jjwt:0.9.1"
+	implementation "org.bouncycastle:bcpkix-jdk15on:1.50"
+	implementation "org.apache.httpcomponents:httpclient:4.5.13"
+	implementation fileTree(dir: 'libs', include: '*.jar')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+// apple login
+tasks.withType(JavaCompile){
+	options.compilerArgs.addAll([
+			"--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.util=ALL-UNNAMED",
+			"--add-exports=java.base/sun.security.x509=ALL-UNNAMED"
+	])
 }
 
 //Querydsl 추가, 자동 생성된 Q클래스 gradle clean으로 제거
